<resources>
    <string name="app_name">Help Point</string>

    <!-- General texts -->
    <string name="password">Senha</string>
    <string name="firstName">Nome</string>
    <string name="lastName">Sobrenome</string>
    <string name="email">E-mail</string>
    <string name="repeatPassword">Repita a senha</string>
    <string name="cpf">CPF</string>
    <string name="dateBirthday">Data de nascimento</string>
    <string name="signup">Registrar</string>
    <string name="cancel">Cancelar</string>
    <string name="title_activity_maps">Map</string>
    <string name="create_an_account">Criar uma conta</string>
    <string name="create_account">Criar conta</string>
    <string name="not_registered_yet">Não é cadastrado ainda?</string>
    <string name="request_help">Pedir ajuda</string>
    <string name="type_an_observation">Digite uma observação (opcional)</string>
    <string name="help">Ajudar</string>
    <string name="send_rate">Enviar avaliação</string>

    <!-- Back4app -->
    <string name="parse_app_id">Lw7z2ythkSBQRww4bn9Rb5Zb15Ss202TYgrcfFdE</string>
    <string name="parse_client_key">fNt452wjdnk0sxbrA5SixH8DhFNJLCU0BggEiYAO</string>
    <string name="parse_server">https://parseapi.back4app.com</string>
    <string name="title_activity_help">HelpActivity</string>
</resources>
